Update and rename Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html to Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html

--- a/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html
+++ b/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html
@@ -13,8 +13,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="canonical" href="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html" />
-        <link rel="alternate" href="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html" hreflang="id-ID" />
+        <link rel="canonical" href="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html" />
+        <link rel="alternate" href="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html" hreflang="id-ID" />
         <link rel="shortcut icon" type="image/x-icon" href="https://pub-b546f89742074cf09da6f2e2fc878ff6.r2.dev/SHORTICON%20HAKIM4D.png" />
         <link rel="apple-touch-icon" href="https://pub-b546f89742074cf09da6f2e2fc878ff6.r2.dev/SHORTICON%20HAKIM4D.png" />
         <link rel="icon" type="image/x-icon" href="https://pub-b546f89742074cf09da6f2e2fc878ff6.r2.dev/SHORTICON%20HAKIM4D.png" />
@@ -36,7 +36,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Misteri Scatter Hitam di Mahjong Ways 3: Bagaimana Cara Memicunya? HAKIM4D" />
         <meta property="og:description" content="Temukan misteri scatter hitam di Mahjong Ways 3! Apa itu scatter hitam dan bagaimana cara memicunya? Simak ulasan lengkapnya di sini!" />
-        <meta property="og:url" content="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html" />
+        <meta property="og:url" content="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html" />
         <meta property="og:image" content="https://image-resource77.cloud/uploads/hakim4d-banner/HAKIM4D-5.jpg" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:site_name" content="Slot Gacor" />
@@ -153,7 +153,7 @@
             "@type": "Organization",
             "name": "Slot Gacor",
             "alternateName": "Misteri Scatter Hitam di Mahjong Ways 3: Bagaimana Cara Memicunya? HAKIM4D",
-            "url": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html",
+            "url": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html",
             "logo": "https://pub-b546f89742074cf09da6f2e2fc878ff6.r2.dev/SHORTICON%20HAKIM4D.png"
           }
         </script>
@@ -165,12 +165,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html"
+              "item": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Slot Gacor",
-              "item": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html"
+              "item": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html"
             }]
           }
         </script>
@@ -180,7 +180,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html"
+              "@id": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html"
             },
             "headline": "Misteri Scatter Hitam di Mahjong Ways 3: Bagaimana Cara Memicunya? HAKIM4D",
             "description": "Temukan misteri scatter hitam di Mahjong Ways 3! Apa itu scatter hitam dan bagaimana cara memicunya? Simak ulasan lengkapnya di sini!",
@@ -188,7 +188,7 @@
             "author": {
               "@type": "Organization",
               "name": "Slot Gacor",
-              "url": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html"
+              "url": "https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -301,7 +301,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?-Hakim4D.html" class="rainbow-text">HAKIM4D</a>. Reserved.</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://berbagi-2025.github.io/naga-hitam-emas/Misteri-Scatter-Hitam-Di-Mahjong-Ways-3-Bagaimana-Cara-Memicunya?.html" class="rainbow-text">HAKIM4D</a>. Reserved.</span></div>
         </section>
       </body>
     </html>
